--- a/cube_bathymetry/package.xml
+++ b/cube_bathymetry/package.xml
@@ -9,6 +9,7 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>grid_map_ros</depend>
   <build_depend>libgdal-dev</build_depend>
   <depend>rosbag</depend>
   <depend>roscpp</depend>
